[gd_scene load_steps=15 format=3 uid="uid://bynb0nxebwr87"]

[ext_resource type="Texture2D" uid="uid://c4raotdsqdcbh" path="res://assets/panels/button_panel/button_panel_800x800.png" id="1_7a052"]
[ext_resource type="Script" path="res://scenes/bedroom_scene/popups/bedroom_popup_altar.gd" id="1_lq4od"]
[ext_resource type="LabelSettings" uid="uid://cikkld844vyvt" path="res://assets/fonts/orbitron_24_so.tres" id="2_xmuyp"]
[ext_resource type="LabelSettings" uid="uid://c0r3vu37o7tx8" path="res://assets/fonts/orbitron_16_so.tres" id="3_vvdgl"]
[ext_resource type="Texture2D" uid="uid://qnbdy1vgg1j5" path="res://assets/panels/close_button/close_button_panel_50x50.png" id="4_hygjo"]
[ext_resource type="Texture2D" uid="uid://blu3v660yt63r" path="res://assets/panels/close_button/close_button_panel_50x50_pressed.png" id="5_6h3js"]
[ext_resource type="Texture2D" uid="uid://b7hak70t6d852" path="res://assets/panels/button_panel/button_panel_200x200/button_panel_200x200.png" id="5_j7nmy"]
[ext_resource type="Texture2D" uid="uid://w8eb67ngwgep" path="res://assets/panels/close_button/close_button_panel_50x50_hover.png" id="6_803sb"]
[ext_resource type="Texture2D" uid="uid://ca5ueuo3jdeiy" path="res://assets/panels/button_panel/button_panel_200x200/button_panel_200x200_pressed.png" id="6_anp5o"]
[ext_resource type="Texture2D" uid="uid://bts61xxwj7utk" path="res://assets/panels/button_panel/button_panel_200x200/button_panel_200x200_hover.png" id="7_3lsvg"]
[ext_resource type="LabelSettings" uid="uid://bnintpa14r1ev" path="res://assets/fonts/orbitron_32_so.tres" id="8_o8si8"]
[ext_resource type="Texture2D" uid="uid://bbobfn5s0a72r" path="res://assets/panels/next_button/next_button_150x80.png" id="9_bvkf7"]
[ext_resource type="Texture2D" uid="uid://c66d4tjw6s8rc" path="res://assets/panels/next_button/next_button_150x80_pressed.png" id="10_vugjx"]
[ext_resource type="Texture2D" uid="uid://c5bayin3o83gi" path="res://assets/panels/next_button/next_button_150x80_hover.png" id="11_bmh03"]

[node name="AltarPopup" type="Panel"]
custom_minimum_size = Vector2(800, 800)
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_lq4od")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("1_7a052")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 50

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="TitleLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
text = "THE ALTAR"
label_settings = ExtResource("2_xmuyp")

[node name="TitleLabel2" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
text = "Build your Dice Loadouts"
label_settings = ExtResource("3_vvdgl")

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="DiceSlot1" type="TextureButton" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("5_j7nmy")
texture_pressed = ExtResource("6_anp5o")
texture_hover = ExtResource("7_3lsvg")

[node name="DiceSlot2" type="TextureButton" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("5_j7nmy")
texture_pressed = ExtResource("6_anp5o")
texture_hover = ExtResource("7_3lsvg")

[node name="DiceSlot3" type="TextureButton" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("5_j7nmy")
texture_pressed = ExtResource("6_anp5o")
texture_hover = ExtResource("7_3lsvg")

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="DiceSlot4" type="TextureButton" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
texture_normal = ExtResource("5_j7nmy")
texture_pressed = ExtResource("6_anp5o")
texture_hover = ExtResource("7_3lsvg")

[node name="Control" type="Control" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(200, 200)
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer2/Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -109.5
offset_top = -62.5
offset_right = 109.5
offset_bottom = 62.5
grow_horizontal = 2
grow_vertical = 2
text = "Dice 
Loadout"
label_settings = ExtResource("8_o8si8")
horizontal_alignment = 1
vertical_alignment = 2

[node name="Label2" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer2/Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -109.0
offset_top = 38.0
offset_right = 110.0
offset_bottom = 107.0
grow_horizontal = 2
grow_vertical = 2
text = "KIT #1"
label_settings = ExtResource("3_vvdgl")
horizontal_alignment = 1
vertical_alignment = 1

[node name="TextureButton2" type="TextureButton" parent="MarginContainer/VBoxContainer/HBoxContainer2/Control"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -75.0
offset_right = 75.0
offset_bottom = 200.0
grow_horizontal = 2
texture_normal = ExtResource("9_bvkf7")
texture_pressed = ExtResource("10_vugjx")
texture_hover = ExtResource("11_bmh03")

[node name="DiceSlot5" type="TextureButton" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
texture_normal = ExtResource("5_j7nmy")
texture_pressed = ExtResource("6_anp5o")
texture_hover = ExtResource("7_3lsvg")

[node name="HBoxContainer3" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="DiceSlot6" type="TextureButton" parent="MarginContainer/VBoxContainer/HBoxContainer3"]
layout_mode = 2
texture_normal = ExtResource("5_j7nmy")
texture_pressed = ExtResource("6_anp5o")
texture_hover = ExtResource("7_3lsvg")

[node name="DiceSlot7" type="TextureButton" parent="MarginContainer/VBoxContainer/HBoxContainer3"]
layout_mode = 2
texture_normal = ExtResource("5_j7nmy")
texture_pressed = ExtResource("6_anp5o")
texture_hover = ExtResource("7_3lsvg")

[node name="CloseButton" type="TextureButton" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -60.0
offset_top = 25.0
offset_right = -10.0
offset_bottom = 75.0
grow_horizontal = 0
scale = Vector2(0.5, 0.5)
texture_normal = ExtResource("4_hygjo")
texture_pressed = ExtResource("5_6h3js")
texture_hover = ExtResource("6_803sb")
